# tw-stock-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  ERROR_HANDLING_SUMMARY.md  GITHUB_RELEASE.md  LICENSE  README.md  TODO.md  mcp_server.py  pyproject.toml
docs/: ARCHITECTURE.md  provider-capabilities.md
tests/: test_stock_code.py
tests/integration/: test_error_handling_integration.py
tests/unit/: test_exceptions.py  test_mcp_resource_service.py  test_validation.py
tw_stock_agent/exceptions/: __init__.py  api_exceptions.py  base.py  cache_exceptions.py  mcp_exceptions.py  stock_exceptions.py  validation_exceptions.py
tw_stock_agent/providers/: __init__.py  factory.py  finmind_provider.py  models.py  twstock_provider.py
tw_stock_agent/services/: cache_service.py  deviation_service.py  market_service.py  mcp_resource_service.py  service_container.py  stock_service.py
tw_stock_agent/tools/: stock_code.py  stock_tools.py  twse_equities.csv
tw_stock_agent/utils/: config.py  connection_pool.py  data_fetcher.py  database_pool.py  lifecycle_manager.py  mcp_error_handler.py  performance_monitor.py  rate_limiter.py  validation.py
tw_stock_mcp/: server.py
tw_stock_mcp/models/: __init__.py  stock_models.py
tw_stock_mcp/providers/: __init__.py  base.py  factory.py  finmind_provider.py  models.py  twstock_provider.py
tw_stock_mcp/services/: cache_service.py  deviation_service.py  market_service.py  mcp_resource_service.py  service_container.py  stock_service.py
tw_stock_mcp/tools/: stock_tools.py  tpex_equities.csv
tw_stock_mcp/utils/: connection_pool.py  data_fetcher.py  database_pool.py  error_handler.py  lifecycle_manager.py  performance_monitor.py
