[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "tw-stock-mcp"
version = "0.1.0"
description = "台灣股市資料 MCP 服務器"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Alan Sung", email = "clsung@gmail.com"},
]
dependencies = [
    "mcp[cli]>=1.4.1",
    "twstock>=1.4.0", # 台灣股市資料庫
    "cachetools>=5.3.0", # 快取支援
    "pydantic>=2.0.0", # 資料驗證
    "pydantic-settings>=2.0.0",
    "tenacity>=8.2.0", # 重試機制
    "aiohttp>=3.9.0", # HTTP 客戶端與連線池
    "lxml>=5.4.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-asyncio>=0.26.0",
    "tzdata>=2025.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",       # 替代 black, isort, flake8
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.3.0",
]
monitoring = [
    "psutil>=5.9.0",    # 系統監控
]

[project.scripts]
tw-stock-mcp = "tw_stock_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["tw_stock_mcp"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.isort]
known-first-party = ["tw_stock_mcp"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=tw_stock_mcp --cov-report=term-missing"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.11.7",
]
